<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Test2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="MainActivity_button_loadImageFromSdCard">From sd card</string>
    <string name="MainActivity_button_loadImageFromCamera">From Camera</string>
    <string name="MainActivity_imageView_contentDescription">Image Preview</string>
    <string name="MainActivity_textView_loadImage">Load Image</string>
    <string name="MainActivity_button_save">Save</string>
    <string name="MainActivity_button_cancel">Cancel</string>
    <string name="MainActivity_button_showMyGallery">Show My Gallery</string>
    <string name="MainActivity_edittext_label_hint">Enter some label for the pic</string>
    
    <string name="GalleryViewActivity_image_contentDescription">Image</string>
    
    <string name="MainActivity_label">My Gallery Controls</string>
    <string name="GalleryViewActivity_label">My Gallery</string>
    
    <string name="toast_emptyLabel">Please fill out label</string>
    <string name="toast_noResolverForPhotoPickerIntent">Sorry! no app in your phone can help us getting images from sd card</string>
    <string name="toast_noResolverForTakePictureIntent">Sorry! you don\'t have camera active</string>
    <string name="toast_resultNotOkForIntents">Please select an image to load</string>
    <string name="progressDialog_savingImage">Saving Image&#8230;</string>
    <string name="toast_imageSaved">The image has been saved.</string>
    <string name="toast_loadingImages">Loading images</string>
    <string name="toast_lookingUpDatabase">Looking up the database&#8230;</string>
    <string name="toast_loading">Loading&#8230;</string>
    <string name="toast_noImageInDatabase">You haven\'t added any image till now</string>
    

</resources>
